Изменено чтение файла